correccion de la logica

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         </div>
       </div>
       <div id="container-letras">
-        <span id="nuevo-secreto"></span>
+        <span id="palabras-secretas"></span>
+        <span id="letras-seleccionadas"></span>
+        <span id="palabra-elegida"></span>
+        <span id="letras-incorrectas"></span>
         <div id="teclado">
           <div id="fila-superior" class="fila-teclado">
             <span class="letra">Q</span>
@@ -71,6 +74,8 @@
         </footer>
       <script type="text/javascript" src="js/funciones.js"></script>
       <script type="text/javascript" src="js/canvas.js"></script>
-      <script type="text/javascript" src="js/ingresa-nueva-palabra.js"></script>
+      <script type="text/javascript" src="js/palabras-secretas.js"></script>
+      <script type="text/javascript" src="js/seleccionar-letra.js"></script>
+      <script type="text/javascript" src="js/jugar.js"></script>
   </body>
 </html>
