agrega nuevas palabras

--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
         </div>
       </div>
       <div id="container-letras">
-        <span id="palabras-secretas"></span>
+        <div id="palabras-secretas">
+          <span class="palabra-secreta">ORACLE</span>
+          <span class="palabra-secreta">ALURA</span>
+          <span class="palabra-secreta">ONE</span>
+          <span class="palabra-secreta">PROGRAMACION</span>
+          <span class="palabra-secreta">WEB</span>
+          <span class="palabra-secreta">INTERNET</span>
+          <span class="palabra-secreta">WWW</span>
+          <span class="palabra-secreta">TECNOLOGIA</span>
+          <span class="palabra-secreta">INFORMATICA</span>
+          <span class="palabra-secreta">LOGICA</span>
+        </div>
         <span id="letras-seleccionadas"></span>
         <span id="palabra-elegida"></span>
         <span id="letras-incorrectas"></span>
