acomode los textos que no deben mostrarse

--- a/index.html
+++ b/index.html
@@ -20,21 +20,12 @@
         </div>
       </div>
       <div id="container-letras">
-        <div id="palabras-secretas">
-          <span class="palabra-secreta">ORACLE</span>
-          <span class="palabra-secreta">ALURA</span>
-          <span class="palabra-secreta">ONE</span>
-          <span class="palabra-secreta">PROGRAMACION</span>
-          <span class="palabra-secreta">WEB</span>
-          <span class="palabra-secreta">INTERNET</span>
-          <span class="palabra-secreta">WWW</span>
-          <span class="palabra-secreta">TECNOLOGIA</span>
-          <span class="palabra-secreta">INFORMATICA</span>
-          <span class="palabra-secreta">LOGICA</span>
-        </div>
-        <span id="letras-seleccionadas"></span>
-        <span id="palabra-elegida"></span>
-        <span id="letras-incorrectas"></span>
+        <div id="deletrea-pal-sorteada"><span class="span-invisible">O</span></div>
+
+        <!-- Este div despues lo tengo que mover abajo del footer y agregarle la clase de span invisible -->
+        <div><span id="letras-seleccionadas"></span><span class="span-invisible">O</span></div>
+
+        <div id="letras-incorrectas"><span class="span-invisible">O</span></div>
         <div id="teclado">
           <div id="fila-superior" class="fila-teclado">
             <span class="letra">Q</span>
@@ -81,8 +72,20 @@
             <li>País: Argentina</li>
             <li>email: joeldario9912@gmail.com</li>
           </ul>
-
         </footer>
+        <div id="palabras-secretas">
+          <span class="palabra-secreta">ORACLE</span>
+          <span class="palabra-secreta">ALURA</span>
+          <span class="palabra-secreta">ONE</span>
+          <span class="palabra-secreta">PROGRAMACION</span>
+          <span class="palabra-secreta">WEB</span>
+          <span class="palabra-secreta">INTERNET</span>
+          <span class="palabra-secreta">WWW</span>
+          <span class="palabra-secreta">TECNOLOGIA</span>
+          <span class="palabra-secreta">INFORMATICA</span>
+          <span class="palabra-secreta">LOGICA</span>
+        </div>
+        <span id="palabra-sorteada"></span>
       <script type="text/javascript" src="js/funciones.js"></script>
       <script type="text/javascript" src="js/canvas.js"></script>
       <script type="text/javascript" src="js/palabras-secretas.js"></script>
