agregue la comparacion de letras, me falta validar las letras ingresadas

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <div><span id="letras-seleccionadas"></span><span class="span-invisible">O</span></div>
 
         <div id="letras-incorrectas"><span class="span-invisible">O</span></div>
+
+        <input type="text" id="ingresa-letra">
+
         <div id="teclado">
           <div id="fila-superior" class="fila-teclado">
             <span class="letra">Q</span>
@@ -90,6 +93,7 @@
       <script type="text/javascript" src="js/canvas.js"></script>
       <script type="text/javascript" src="js/palabras-secretas.js"></script>
       <script type="text/javascript" src="js/seleccionar-letra.js"></script>
-      <script type="text/javascript" src="js/jugar.js"></script>
+      <script type="text/javascript" src="js/sortear-palabra.js"></script>
+      <script type="text/javascript" src="js/adivina-palabra.js"></script>
   </body>
 </html>
