--- a/index.html
+++ b/index.html
@@ -10,89 +10,50 @@
   </head>
   <body>
       <div id="container-inputs">
-        <div style="text-align:center; margin: 50px 0px;">
+        <div id="titulo-boton">
           <h1 class="titulo">Ahorcado</h1>
           <button class="btn" id="iniciar-juego">INICIAR JUEGO</button>
         </div>
-        <div style="text-align:center">
+        <div id="input-boton">
           <input class="text-input" type="text" id="input-nueva-palabra" placeholder="Escriba una nueva palabra">
           <button class="btn" id="nueva-palabra">AGREGAR PALABRA</button> 
         </div>
       </div>
       <div id="container-letras">
-        <div id="deletrea-pal-sorteada"><span class="span-invisible">O</span></div>
-
-        <!-- Este div despues lo tengo que mover abajo del footer y agregarle la clase de span invisible -->
-        <div><span id="letras-seleccionadas"></span><span class="span-invisible">O</span></div>
-
-        <div id="letras-incorrectas"><span class="span-invisible">O</span></div>
-
+        <div id="deletrea-pal-sorteada">
+          <span class="span-invisible">O</span>
+        </div>
+        <div id="letras-incorrectas">
+          <span class="span-invisible">O</span>
+        </div>
         <input type="text" id="ingresa-letra">
-
-        <div id="teclado">
-          <div id="fila-superior" class="fila-teclado">
-            <span class="letra">Q</span>
-            <span class="letra">W</span>
-            <span class="letra">E</span>
-            <span class="letra">R</span>
-            <span class="letra">T</span>
-            <span class="letra">Y</span>
-            <span class="letra">U</span>
-            <span class="letra">I</span>
-            <span class="letra">O</span>
-            <span class="letra">P</span>
-          </div>
-          <div id="fila-intermedia" class="fila-teclado">
-            <span class="letra">A</span>
-            <span class="letra">S</span>
-            <span class="letra">D</span>
-            <span class="letra">F</span>
-            <span class="letra">G</span>
-            <span class="letra">H</span>
-            <span class="letra">J</span>
-            <span class="letra">K</span>
-            <span class="letra">L</span>
-            <span class="letra">Ñ</span>
-          </div>
-          <div id="fila-inferior" class="fila-teclado">
-            <span class="letra">Z</span>
-            <span class="letra">X</span>
-            <span class="letra">C</span>
-            <span class="letra">V</span>
-            <span class="letra">B</span>
-            <span class="letra">N</span>
-            <span class="letra">M</span>
-          </div>
-        </div>
       </div>
-        
-        <canvas id="ahorcado" width= "464" height="592">
-        </canvas>
-        <footer>
-          <h2>Datos del creador</h2>
-          <ul>
-            <li>Nombre: Joel Dario Muñoz</li>
-            <li>País: Argentina</li>
-            <li>email: joeldario9912@gmail.com</li>
-          </ul>
-        </footer>
-        <div id="palabras-secretas">
-          <span class="palabra-secreta">ORACLE</span>
-          <span class="palabra-secreta">ALURA</span>
-          <span class="palabra-secreta">ONE</span>
-          <span class="palabra-secreta">PROGRAMACION</span>
-          <span class="palabra-secreta">WEB</span>
-          <span class="palabra-secreta">INTERNET</span>
-          <span class="palabra-secreta">WWW</span>
-          <span class="palabra-secreta">TECNOLOGIA</span>
-          <span class="palabra-secreta">INFORMATICA</span>
-          <span class="palabra-secreta">LOGICA</span>
-        </div>
-        <span id="palabra-sorteada"></span>
+      <canvas id="ahorcado" width= "464" height="592">
+      </canvas>
+      <footer>
+        <h2>Datos del creador</h2>
+        <ul>
+          <li>Nombre: Joel Dario Muñoz</li>
+          <li>País: Argentina</li>
+          <li>email: joeldario9912@gmail.com</li>
+        </ul>
+      </footer>
+      <div id="palabras-secretas">
+        <span class="palabra-secreta">ORACLE</span>
+        <span class="palabra-secreta">ALURA</span>
+        <span class="palabra-secreta">ONE</span>
+        <span class="palabra-secreta">PROGRAMACION</span>
+        <span class="palabra-secreta">WEB</span>
+        <span class="palabra-secreta">INTERNET</span>
+        <span class="palabra-secreta">WWW</span>
+        <span class="palabra-secreta">TECNOLOGIA</span>
+        <span class="palabra-secreta">INFORMATICA</span>
+        <span class="palabra-secreta">LOGICA</span>
+      </div>
+      <span id="palabra-sorteada"></span>
       <script type="text/javascript" src="js/funciones.js"></script>
       <script type="text/javascript" src="js/canvas.js"></script>
       <script type="text/javascript" src="js/palabras-secretas.js"></script>
-      <script type="text/javascript" src="js/seleccionar-letra.js"></script>
       <script type="text/javascript" src="js/sortear-palabra.js"></script>
       <script type="text/javascript" src="js/adivina-palabra.js"></script>
   </body>
