falta reconocer letras repetidas

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <span class="palabra-secreta">TECNOLOGIA</span>
         <span class="palabra-secreta">INFORMATICA</span>
         <span class="palabra-secreta">LOGICA</span>
+        <span class="palabra-secreta">GATO</span>
+        <span class="palabra-secreta">COCODRILO</span>
+        <span class="palabra-secreta">PALOMA</span>
+        <span class="palabra-secreta">VACA</span>
+        <span class="palabra-secreta">LOBO</span>
+        <span class="palabra-secreta">CONEJO</span>
       </div>
       <span id="palabra-sorteada"></span>
       <script type="text/javascript" src="js/funciones.js"></script>
