me falta dar por terminado el juego y optimizar codigo

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="shortcut icon" href="icon.svg" type="image/x-icon">
   </head>
   <body>
+    <div id="main">
       <div id="container-inputs">
         <div id="titulo-boton">
-          <h1 class="titulo">Ahorcado</h1>
+          <h1>Ahorcado</h1>
+          <H2>(Solo funciona con letras mayúsculas)</H2>
           <button class="btn" id="iniciar-juego">INICIAR JUEGO</button>
         </div>
         <div id="input-boton">
@@ -62,5 +64,7 @@
       <script type="text/javascript" src="js/palabras-secretas.js"></script>
       <script type="text/javascript" src="js/sortear-palabra.js"></script>
       <script type="text/javascript" src="js/adivina-palabra.js"></script>
+    </div>
   </body>
-</html>
+  </html>
+  
